# transcriber_metadata_maker_code

./: Cargo.toml  README.md  rust_learning_notes.md
src/: main.rs
