[package]
name = "transcriber_metadata_maker_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mod_main"
path = "src/main.rs"


[dependencies]
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = "0.11.13"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }